---
title: Schema relacional del CV (PostgreSQL 18) — 3NF
---
erDiagram

    %% =====================================================================
    %% CATALOGOS / VOCABULARIOS COMPARTIDOS
    %% =====================================================================
    NICHES {
        uuid     id        PK "uuidv7()"
        string   slug      UK "fintech|architect|leader|vibe|generic"
        int      position
        datetime created_at
        datetime updated_at
    }
    SKILLS {
        uuid     id        PK "uuidv7()"
        string   name      UK "competencia deduplicada"
        datetime created_at
        datetime updated_at
    }
    TECH_TAGS {
        uuid     id        PK "uuidv7()"
        string   name      UK "stack tecnico deduplicado"
        datetime created_at
        datetime updated_at
    }

    %% =====================================================================
    %% PERFIL
    %% =====================================================================
    PROFILE {
        uuid     id           PK "uuidv7()"
        string   name
        string   handle       UK
        string   location
        string   email
        string   phone        "nullable"
        string   linkedin_url
        string   github_url
        string   website_url  "nullable"
        string   avatar_url
        datetime created_at
        datetime updated_at
    }
    PROFILE_STATS {
        uuid     id               PK "uuidv7()"
        uuid     profile_id       FK,UK
        int      years_experience
        int      companies
        int      countries
        int      certifications
    }

    %% =====================================================================
    %% EXPERIENCIA
    %% =====================================================================
    EXPERIENCES {
        uuid     id          PK "uuidv7()"
        string   slug        UK
        string   company
        string   company_url "nullable"
        string   start_ym    "YYYY-MM (CHECK)"
        string   end_ym      "nullable YYYY-MM"
        enum     seniority   "intern|junior|mid|senior|lead"
        datetime created_at
        datetime updated_at
    }
    EXPERIENCE_BULLETS {
        uuid     id            PK "uuidv7()"
        uuid     experience_id FK
        enum     kind          "responsibility|achievement"
        int      position
        datetime created_at
        datetime updated_at
    }

    %% =====================================================================
    %% PROYECTOS
    %% =====================================================================
    PROJECTS {
        uuid     id              PK "uuidv7()"
        string   slug            UK
        string   name            "nombre propio"
        string   url             "nullable"
        string   repo            "nullable"
        enum     status          "active|inactive|concept"
        enum     project_type    "web|mobile|cli|library|ai|fintech-platform"
        boolean  is_confidential
        datetime created_at
        datetime updated_at
    }
    PROJECT_CASE_STUDIES {
        uuid     id         PK "uuidv7()"
        uuid     project_id FK,UK
        datetime created_at
        datetime updated_at
    }
    PROJECT_METRICS {
        uuid     id           PK "uuidv7()"
        uuid     project_id   FK
        string   metric_key
        string   metric_value
        int      position
        datetime created_at
        datetime updated_at
    }

    %% =====================================================================
    %% OTRAS ENTIDADES DEL CV
    %% =====================================================================
    SKILL_CATEGORIES {
        uuid     id        PK "uuidv7()"
        string   slug      UK
        enum     kind      "technical|soft"
        datetime created_at
        datetime updated_at
    }
    CERTIFICATES {
        uuid     id        PK "uuidv7()"
        string   slug      UK
        string   title
        string   issuer
        date     issued_on
        string   url
        datetime created_at
        datetime updated_at
    }
    AWARDS {
        uuid     id         PK "uuidv7()"
        string   slug       UK
        string   issuer
        string   awarded_ym "YYYY-MM (CHECK)"
        string   url        "nullable"
        datetime created_at
        datetime updated_at
    }
    EDUCATION {
        uuid     id          PK "uuidv7()"
        string   slug        UK
        string   institution
        string   start_year
        string   end_year
        string   url         "nullable"
        datetime created_at
        datetime updated_at
    }
    REFERENCES {
        uuid     id           PK "uuidv7()"
        string   slug         UK
        string   name
        string   role
        string   company      "nullable"
        string   linkedin_url
        datetime created_at
        datetime updated_at
    }
    LANGUAGES {
        uuid     id        PK "uuidv7()"
        string   slug      UK
        datetime created_at
        datetime updated_at
    }
    PUBLICATIONS {
        uuid     id            PK "uuidv7()"
        string   slug          UK
        string   title
        string   platform
        string   url
        string   canonical_url "nullable"
        date     published_on
        datetime created_at
        datetime updated_at
    }

    %% =====================================================================
    %% TABLAS POLIMORFICAS (genericas a cualquier entidad)
    %% =====================================================================
    TRANSLATIONS {
        enum     entity_type PK "tipo de la entidad"
        uuid     entity_id   PK "polimorfico (trigger)"
        string   field       PK "role|summary|title|..."
        enum     locale      PK "es|en"
        text     value
        datetime created_at
        datetime updated_at
    }
    NICHE_PRIORITIES {
        enum     entity_type PK "tipo de la entidad"
        uuid     entity_id   PK "polimorfico (trigger)"
        uuid     niche_id    PK,FK
        int      priority
        datetime created_at
        datetime updated_at
    }

    %% =====================================================================
    %% TABLAS DE UNION N:M — entidad <-> niche
    %% =====================================================================
    EXPERIENCE_NICHES {
        uuid experience_id PK,FK
        uuid niche_id      PK,FK
    }
    PROJECT_NICHES {
        uuid project_id PK,FK
        uuid niche_id   PK,FK
    }
    CERTIFICATE_NICHES {
        uuid certificate_id PK,FK
        uuid niche_id       PK,FK
    }
    AWARD_NICHES {
        uuid award_id PK,FK
        uuid niche_id PK,FK
    }
    EDUCATION_NICHES {
        uuid education_id PK,FK
        uuid niche_id     PK,FK
    }
    REFERENCE_NICHES {
        uuid reference_id PK,FK
        uuid niche_id     PK,FK
    }
    LANGUAGE_NICHES {
        uuid language_id PK,FK
        uuid niche_id    PK,FK
    }
    PUBLICATION_NICHES {
        uuid publication_id PK,FK
        uuid niche_id       PK,FK
    }
    SKILL_CATEGORY_NICHES {
        uuid skill_category_id PK,FK
        uuid niche_id          PK,FK
    }

    %% =====================================================================
    %% TABLAS DE UNION N:M — vocabularios
    %% =====================================================================
    EXPERIENCE_SKILLS {
        uuid experience_id PK,FK
        uuid skill_id      PK,FK
        enum kind          PK "technical|soft"
    }
    SKILL_CATEGORY_SKILLS {
        uuid skill_category_id PK,FK
        uuid skill_id          PK,FK
        int  position
    }
    PROJECT_TECH_TAGS {
        uuid project_id  PK,FK
        uuid tech_tag_id PK,FK
        int  position
    }

    %% =====================================================================
    %% RELACIONES
    %% =====================================================================

    %% Perfil
    PROFILE ||--o| PROFILE_STATS : "tiene"

    %% Experiencia
    EXPERIENCES ||--o{ EXPERIENCE_BULLETS : "tiene bullets"
    EXPERIENCES ||--o{ EXPERIENCE_NICHES : "filtrada en"
    EXPERIENCES ||--o{ EXPERIENCE_SKILLS : "declara"
    NICHES ||--o{ EXPERIENCE_NICHES : "agrupa"
    SKILLS ||--o{ EXPERIENCE_SKILLS : "usada en"

    %% Proyectos
    PROJECTS ||--o| PROJECT_CASE_STUDIES : "tiene case study"
    PROJECTS ||--o{ PROJECT_METRICS : "tiene metricas"
    PROJECTS ||--o{ PROJECT_NICHES : "filtrado en"
    PROJECTS ||--o{ PROJECT_TECH_TAGS : "usa stack"
    NICHES ||--o{ PROJECT_NICHES : "agrupa"
    TECH_TAGS ||--o{ PROJECT_TECH_TAGS : "usado en"

    %% Skill categories
    SKILL_CATEGORIES ||--o{ SKILL_CATEGORY_SKILLS : "agrupa"
    SKILL_CATEGORIES ||--o{ SKILL_CATEGORY_NICHES : "filtrada en"
    SKILLS ||--o{ SKILL_CATEGORY_SKILLS : "pertenece a"
    NICHES ||--o{ SKILL_CATEGORY_NICHES : "agrupa"

    %% Resto de entidades <-> niches
    CERTIFICATES ||--o{ CERTIFICATE_NICHES : "filtrado en"
    AWARDS ||--o{ AWARD_NICHES : "filtrado en"
    EDUCATION ||--o{ EDUCATION_NICHES : "filtrada en"
    REFERENCES ||--o{ REFERENCE_NICHES : "filtrada en"
    LANGUAGES ||--o{ LANGUAGE_NICHES : "filtrado en"
    PUBLICATIONS ||--o{ PUBLICATION_NICHES : "filtrada en"
    NICHES ||--o{ CERTIFICATE_NICHES : "agrupa"
    NICHES ||--o{ AWARD_NICHES : "agrupa"
    NICHES ||--o{ EDUCATION_NICHES : "agrupa"
    NICHES ||--o{ REFERENCE_NICHES : "agrupa"
    NICHES ||--o{ LANGUAGE_NICHES : "agrupa"
    NICHES ||--o{ PUBLICATION_NICHES : "agrupa"

    %% Priority (polimorfica): niche_id si tiene FK real; entity_id no
    NICHES ||--o{ NICHE_PRIORITIES : "pondera"

    %% TRANSLATIONS y NICHE_PRIORITIES referencian entity_id de forma
    %% polimorfica (sin FK SQL — validado por el trigger assert_entity_exists).
    %% Las relaciones punteadas marcan esa dependencia logica:
    EXPERIENCES }o..o{ TRANSLATIONS : "role (polimorfico)"
    PROJECTS }o..o{ TRANSLATIONS : "summary (polimorfico)"
    NICHE_PRIORITIES }o..o{ EXPERIENCES : "prioriza (polimorfico)"
